# Grade-Tracker-App

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: addfrienddialog.h  allcoursespage.h  course.h  coursecreatedialog.h  coursedata.h  coursepage.h  database.h  errordialog.h  friend_data.h  friendpage.h  helpdialog.h  homepage.h  inputgradedialog.h  loadingdialog.h  loghoursdialog.h  loginpage.h  mainwindow.h  rank_type.h  timerdialog.h  userdata.h
resources/: resource.qrc
src/: addfrienddialog.cpp  allcoursespage.cpp  course.cpp  coursecreatedialog.cpp  coursedata.cpp  coursepage.cpp  database.cpp  errordialog.cpp  friend_data.cpp  friendpage.cpp  helpdialog.cpp  homepage.cpp  inputgradedialog.cpp  loadingdialog.cpp  loghoursdialog.cpp  loginpage.cpp  main.cpp  mainwindow.cpp  timerdialog.cpp  userdata.cpp
ui/: addfrienddialog.ui  allcoursespage.ui  coursecreatedialog.ui  coursepage.ui  errordialog.ui  friendpage.ui  helpdialog.ui  homepage.ui  inputgradedialog.ui  loadingdialog.ui  loghoursdialog.ui  loginpage.ui  mainwindow.ui  timerdialog.ui
